<resources>
    <string name="app_name">NintendoEShopHelper</string>
    <string name="nav_settings">Settings</string>
    <string name="mail">imdounx@gmail.com</string>
    <string name="username">Dounx</string>
    <string name="search">Search</string>
    <string name="nav_all_games">All Games</string>
    <string name="nav_not_released_games">Not Released Games</string>
    <string name="nav_discount_games">Discount Games</string>
    <string name="all_games">All Games</string>
    <string name="update_success">Update Success</string>
    <string name="category">Category:</string>
    <string name="lowest_price">Lowest Price:</string>
    <string name="language">Language:</string>
    <string name="player_number">Player Number:</string>
    <string name="release_date">Release Date:</string>
    <string name="loading">Loading...</string>
    <string name="country">Country:</string>
    <string name="failed">Failed!</string>
    <string name="getting_price_from">Getting Price From</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="have_discount">Have Discount!</string>
    <string name="off">OFF</string>
    <string name="title_activity_settings">Settings</string>
    <string name="restart">Restart</string>
    <string name="restart_info">Switch language need to restart app.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="update_game">Update Game</string>
    <string name="update_rate">Update Rate</string>
    <string name="update_country">Update Country</string>
    <string name="network_error">Network Error, Please check your network and retry.</string>
    <string name="discount_useless">This game does not discount the price actually cheaper than the discount.</string>
    <string name="not_exist">This game has no information.</string>

    <string name="general_settings">General Settings</string>
    <string name="choose_language">Choose Language</string>
    <string name="choose_language_summary">Display the selected language.</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="choose_currency_summary">Choose a currency to convert.</string>
    <string name="update_data">Update Data</string>
    <string name="update_game_info">Update Game Information</string>
    <string name="update_game_info_summary">Update the game list data of US service, Europe service and Japan service.</string>
    <string name="update_discount_info">Update Discount Information</string>
    <string name="update_discount_info_summary">Update the discount game info.</string>
    <string name="update_rate_info">Update Rate Information</string>
    <string name="update_rate_info_summary">Update the latest exchange rate.</string>
    <string name="update_support_country">Update Support Country</string>
    <string name="update_support_country_summary">It may take a long time to update all open service countries.</string>
    <string name="about">About</string>
    <string name="github_title">Github</string>
    <string name="github">https://github.com/Dounx/NintendoEShopHelper</string>

    <array name="language_entries">
        <item>English</item>
        <item>中文</item>
    </array>

    <array name="language_entry_values">
        <item>English</item>
        <item>Chinese</item>
    </array>

    <array name="currency_entries">
        <item>AUD</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>ISK</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>RON</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>USD</item>
        <item>ZAR</item>
    </array>

    <array name="currency_entry_values">
        <item>AUD</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>ISK</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>RON</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>USD</item>
        <item>ZAR</item>
    </array>

</resources>
