<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_game_all"
            android:icon="@drawable/ic_all_game"
            android:title="@string/nav_all_games"/>
        <item
            android:id="@+id/nav_game_new"
            android:icon="@drawable/ic_new_game"
            android:title="@string/nav_not_released_games"/>
        <item
            android:id="@+id/nav_game_discount"
            android:icon="@drawable/ic_discount_game"
            android:title="@string/nav_discount_games"/>
    </group>
    <group android:checkableBehavior="single" android:id="@+id/secondary_menu_group">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/nav_settings"/>
    </group>
</menu>